fixed setting page alignment, unified color theme

--- a/src/Input/InputPage.css
+++ b/src/Input/InputPage.css
@@ -344,7 +344,11 @@
     font-weight: 200; */
 
     .submit-button {
+      background-color: #32414d;
+    }
 
+    .submit-button:hover {
+      background-color: #4f6780;
     }
 
     .manual-add-btn {
